@@ -1,3 +1,8 @@
+03-04-23  Muktha <muktha.narayan@wipro.com>
+	* gconf/gconfd.c
+	When reading the saved_state file, gconfd will not log message if 
+	the saved_state file is not present. Fixes bug #110944.
+
 2003-03-27  Brian Cameron <brian.cameron@sun.com>
 
 	* gconf/gconf-sanity-check.c
